	ADD: Added a version conversion in order to keep savegames up to date (#170).
	ADD: Added the Pixolde font from Ocean's Heart.
	ADD: Added Leever colour variations.
	ADD: Added Wallmaster colour variations.
	ADD: Created a movement for the hero when grabbed by a Wallmaster (#254).
	ADD: Added item descriptions directly in the inventory (#257).
	CHG: Redone Spectral Ganon's sprite (#29).
	CHG: Changed Spectral Ganon's settings according to the sprite (#29).
	CHG: Moved the green house in the east of the castle.
	CHG: Rewrote the game intro dialogues (#8).
	CHG: Changed chicken hit values.
	CHG: Renamed dungeon tilesets (#133).
	CHG: Remade the introduction cinematic slides (#86).
	CHG: Improved the shovel usability (#26).
	CHG: Moved hero animations into specific folders (#27).
	CHG: Grouped hero animations into one file instead of different ones for each tunic (#47).
	CHG: Unified the "dialogue_id" property for all signs (#34).
	CHG: Moved small key and clock HUD positions.
	CHG: Switched the dungeons 10 and 12 (#165).
	CHG: Progressively switch enemies behaviour to ALTTD's (#15).
	CHG: Moved the piece of heart #15 from L1 to K2.
	CHG: Restored the graveyard music for the Kakarico Graveyard.
	CHG: Updated the hero head sprite with the actual tunic colours.
	CHG: Lowered the Tektites' damage values (#177).
	CHG: Changed Armos' sprite palette and sounds.
	CHG: Updated the Octoroks' sprites.
	CHG: Changed Link's animation to stopped after bonking against a wall.
	CHG: Updated the enemy weapon script from ALTTD.
	CHG: Renumbered the castle as dungeon 16.
	CHG: Finished rescripting the Ice Rod.
	CHG: Rescripted the Fire Rod.
	CHG: Increased the running speed from 192 to 256.
	CHG: Rescripted bombs with custom entities.
	CHG: Player names can now have up to 8 characters.
	CHG: Allowed the scrollable map to be panned farther.
	CHG: Changed the colour of the options menu cursor to match the other submenus.
	CHG: Updated the copyright year to 2026 in the dialogues.