@@ -8,10 +8,24 @@ map:register_event("on_started", function()
 	map:set_doors_open("door_23_n", false)
 end)
 
-switch_door_22:register_event("on_activated", function()
+sensor_18_door:register_event("on_activated", function()
+  map:set_doors_open("door_23_n", true)
+end)
+
+sensor_23_door:register_event("on_activated", function()
+  switch_door_23:set_activated(false)
+  if hero:get_direction() == 3 then
+      map:close_doors("door_23_n")  
+  end
+end)
+
+switch_door_23:register_event("on_activated", function()
   map:open_doors("door_23_n")
-  timer_manager:start_timer(map, 15000, "countdown", function() --Timer for 15 seconds
+  timer_manager:start_timer(map, 15000, "countdown", true, true, function() --Timer for 15 seconds
     map:close_doors("door_23_n")
-    switch_door_22:set_activated(false)
+    switch_door_23:set_activated(false)
+  end,
+  function()
+    print("AAAA")  
   end)
 end)
