@@ -95,7 +95,7 @@ switch_5_tile:register_event("on_activated", function()
   tile_5_floor_8:set_visible(true)
   tile_5_floor_9:set_visible(true)
   tile_5_floor_10:set_visible(true)
-  timer_manager:start_timer(map, 7000, "countdown", function()
+  timer_manager:start_timer(map, 7000, "countdown", true, true, function()
     tile_5_floor_1:set_visible(false)
     tile_5_floor_2:set_visible(false)
     tile_5_floor_3:set_visible(false)
