@@ -25,7 +25,7 @@ switch_floor:register_event("on_activated", function()
 		tile:set_visible(true)
 	end
 
-  timer_manager:start_timer(map, 5000, "countdown", function() --Timer for 15 seconds
+  timer_manager:start_timer(map, 5000, "countdown", true, true, function() --Timer for 15 seconds
 		switch_floor:set_activated(false)
 		for tile in map:get_entities("tile_floor_") do
 			tile:set_visible(false)
