@@ -1586,6 +1586,7 @@ teletransporter{
   height = 1440,
   transition = "scrolling",
   destination_map = "out/g4",
+  destination = "_side",
 }
 
 teletransporter{
