@@ -1659,6 +1659,8 @@ sound{ id = "menus/modify_value", description = "Modify value" }
 sound{ id = "menus/ok", description = "ok" }
 sound{ id = "menus/pause_close", description = "Pause close" }
 sound{ id = "menus/pause_open", description = "Pause open" }
+sound{ id = "menus/scroll_close", description = "menus/scroll_close" }
+sound{ id = "menus/scroll_open", description = "menus/scroll_open" }
 sound{ id = "menus/select", description = "Select" }
 sound{ id = "menus/solarus_logo", description = "Solarus Logo" }
 sound{ id = "menus/stairs_indicator", description = "stairs_indicator" }
